fix: sign up promotion letter spacing

--- a/src/pages/register/components/SignUpPromotion/SignUpPromotion.module.scss
+++ b/src/pages/register/components/SignUpPromotion/SignUpPromotion.module.scss
@@ -19,7 +19,6 @@
     line-height: 2.4rem;
 
     margin: 0;
-    letter-spacing: 0.15px;
   }
 }
 
